--- a/hub_main.html
+++ b/hub_main.html
@@ -100,7 +100,7 @@
                                 </div>
                             </div>
                             <p style="text-align: center; margin-top: 20px;">
-                                <a href="https://github.com" target="_blank">GitHub Repozytorium</a>
+                                <a href="https://github.com/nodem5/Clicker_full" target="_blank">GitHub Repozytorium</a>
                             </p>
                         </article>
 
@@ -117,6 +117,11 @@
 
                         <!-- Copyright -->
                         <ul class="copyright">
+<li>
+<a href="https://github.com/nodem5/Clicker_full/archive/refs/heads/main.zip" download>
+  <button>Pobierz projekt ZIP</button>
+</a>
+</li>
                             <li>&copy; Clicker Hub. Wszelkie prawa zastrzeżone.</li>
                             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
                             <li>Twórca: Nodem5</li>
